style: fix uneven border on focus

--- a/client/src/components/PostCreator/postcreator.module.css
+++ b/client/src/components/PostCreator/postcreator.module.css
@@ -63,6 +63,9 @@
 .tagSection input:focus + button {
     box-shadow: var(--color-primary) 0px 0px 0px 1px;
 }
+.tagSection select:focus + button {
+    box-shadow: var(--color-primary) 0px 0px 0px 1px;
+}
 .tagSection button {
     display: flex;
     justify-content: center;
